--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "daisyui": "^5.5.5",
     "firebase": "^12.6.0",
     "motion": "^12.23.24",
-    "next": "16.0.3",
+    "next": "^16.1.1",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
